--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,12 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 
-
+# spring.flyway.enabled = true
+# spring.flyway.schemas = kittsdb
+# spring.flyway.default-schema = kittsdb
+# spring.flyway.locations = classpath:db/migration
+# spring.sql.init.mode = always
+# spring.flyway.url = jdbc:mysql://localhost:3306/kittsdb
+# spring.flyway.user = root
+# spring.flyway.password = SuperSQL4268!!
+# spring.flyway.baseline-on-migrate = true
