--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 server.error.whitelabel.enabled= false
 server.error.include-stacktrace= always
-
+# jdbc:mysql://server_host:3306/database?tinyInt1isBit=false
 spring.datasource.url= jdbc:mysql://localhost:3306/kittsdb
 spring.datasource.username= root
 spring.datasource.password= SuperSQL4268!!
