--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+	
+		
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>26.1.0</version>
+		</dependency>
+
 
 		<!-- <dependency>
 			<groupId>org.flywaydb</groupId>
