--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,16 @@ spring.datasource.url= jdbc:mysql://localhost:3306/kittsdb
 spring.datasource.username= root
 spring.datasource.password= SuperSQL4268!!
 spring.jpa.show-sql = true
+spring.config.import=file:secrets.properties
 
 spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+
+
+
 
 # spring.flyway.enabled = true
 # spring.flyway.schemas = kittsdb
