--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,25 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-	
+
+		<dependency>
+			<groupId>com.maciejwalkowiak.spring</groupId>
+			<artifactId>spring-boot-startup-report</artifactId>
+			<version>0.2.0</version>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.3.1</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.stripe</groupId>
 			<artifactId>stripe-java</artifactId>
 			<version>26.1.0</version>
 		</dependency>
-
 
 		<!-- <dependency>
 			<groupId>org.flywaydb</groupId>
