--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 
+logging.level.org.springframework.security=DEBUG
+
 
 
 
