--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework.security=DEBUG
 
